<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.Material3.Light"
    tools:context=".src.ui.view.recipe.MainRecipeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <HorizontalScrollView
            android:id="@+id/sv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_20"
            android:scrollbars="none">
            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_recipe_filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipSpacing="@dimen/margin_8"
                app:singleSelection="true"
                app:selectionRequired="false"
                android:layout_marginStart="@dimen/side_margin"
                android:paddingRight="@dimen/margin_32">
<!--                <com.google.android.material.chip.Chip-->
<!--                    style="@style/CustomVeganTypeChip"-->
<!--                    android:id="@+id/c_filter_all"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="@dimen/item_52"-->
<!--                    app:chipCornerRadius="@dimen/radius_25"-->
<!--                    android:text="@string/recipe_filter_all"-->
<!--                    android:textSize="@dimen/text_14"-->
<!--                    android:fontFamily="@font/notosanskr_regular"-->
<!--                    android:checkable="true"-->
<!--                    android:checked="true"/>-->
                <com.google.android.material.chip.Chip
                    style="@style/CustomVeganTypeChip"
                    android:id="@+id/c_filter_vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_52"
                    app:chipCornerRadius="@dimen/radius_25"
                    android:text="@string/recipe_filter_vegan_kr"
                    android:tag="@string/recipe_filter_vegan_en"
                    android:textSize="@dimen/text_14"
                    android:fontFamily="@font/notosanskr_regular"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomVeganTypeChip"
                    android:id="@+id/c_filter_lacto"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_52"
                    app:chipCornerRadius="@dimen/radius_25"
                    android:text="@string/recipe_filter_lacto_kr"
                    android:tag="@string/recipe_filter_lacto_en"
                    android:textSize="@dimen/text_14"
                    android:fontFamily="@font/notosanskr_regular"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomVeganTypeChip"
                    android:id="@+id/c_filter_lacto_ovo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_52"
                    app:chipCornerRadius="@dimen/radius_25"
                    android:text="@string/recipe_filter_lacto_ovo_kr"
                    android:tag="@string/recipe_filter_lacto_ovo_en"
                    android:textSize="@dimen/text_14"
                    android:fontFamily="@font/notosanskr_regular"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomVeganTypeChip"
                    android:id="@+id/c_filter_pesco"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_52"
                    app:chipCornerRadius="@dimen/radius_25"
                    android:text="@string/recipe_filter_pescatarian_kr"
                    android:tag="@string/recipe_filter_pescatarian_en"
                    android:textSize="@dimen/text_14"
                    android:fontFamily="@font/notosanskr_regular"
                    android:checkable="true" />
                <com.google.android.material.chip.Chip
                    style="@style/CustomVeganTypeChip"
                    android:id="@+id/c_filter_pollo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_52"
                    app:chipCornerRadius="@dimen/radius_25"
                    android:text="@string/recipe_filter_pollo_kr"
                    android:tag="@string/recipe_filter_pollo_en"
                    android:textSize="@dimen/text_14"
                    android:fontFamily="@font/notosanskr_regular"
                    android:checkable="true"/>
                <com.google.android.material.chip.Chip
                    style="@style/CustomVeganTypeChip"
                    android:id="@+id/c_filter_flexitarian"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/item_52"
                    app:chipCornerRadius="@dimen/radius_25"
                    android:text="@string/recipe_filter_flexitarian_kr"
                    android:tag="@string/recipe_filter_flexitarian_en"
                    android:textSize="@dimen/text_14"
                    android:fontFamily="@font/notosanskr_regular"
                    android:checkable="true"/>
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/sv_filter"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="@dimen/margin_12"
            android:layout_marginTop="@dimen/margin_4"
            tools:listitem="@layout/item_recipe" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>