<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_28"
        android:layout_marginHorizontal="@dimen/margin_40">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_24">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_title"
                android:textColor="@color/color_text_32"
                android:textSize="@dimen/text_24"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_description"
                android:textSize="@dimen/text_14"
                android:textColor="@color/color_text_32"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/margin_16"/>
            <Button
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_logout"
                android:textColor="@color/color_text_32"
                android:textSize="@dimen/text_14"
                android:fontFamily="@font/notosanskr_medium"
                android:includeFontPadding="false"
                android:background="@color/color_transparent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:layout_constraintEnd_toStartOf="@id/btn_back"
                android:layout_marginTop="@dimen/margin_34"/>
            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_back"
                android:textColor="@color/color_text_32"
                android:textSize="@dimen/text_14"
                android:fontFamily="@font/notosanskr_medium"
                android:includeFontPadding="false"
                android:background="@color/color_transparent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_34"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>