<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.ui.view.vegantest.TestQuestionChickenFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_vegan_test_ongoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/radius_16"
        android:backgroundTint="@color/color_primary1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/side_margin"
        >
        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_question_chicken"
            android:textColor="@color/color_text_32"
            android:textSize="@dimen/text_16"
            android:fontFamily="@font/notosanskr_regular"
            android:gravity="center"
            android:layout_marginVertical="@dimen/margin_44"
            android:layout_marginHorizontal="@dimen/margin_32"/>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_answer_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_answer_chicken_a"
        android:textSize="@dimen/text_16"
        android:textColor="@color/color_white"
        android:fontFamily="@font/notosanskr_medium"
        android:background="@drawable/btn_filled_primary3"
        app:layout_constraintTop_toBottomOf="@id/cv_vegan_test_ongoing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_48"
        android:layout_marginHorizontal="@dimen/side_margin"/>
    <Button
        android:id="@+id/btn_answer_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_answer_chicken_b"
        android:textSize="@dimen/text_16"
        android:textColor="@color/color_white"
        android:fontFamily="@font/notosanskr_medium"
        android:background="@drawable/btn_filled_primary3"
        app:layout_constraintTop_toBottomOf="@id/btn_answer_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/side_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>