<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.ui.view.mainhome.MainHomeFragment">
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_home_slogan"
        android:layout_width="@dimen/item_276"
        android:layout_height="@dimen/item_80"
        android:backgroundTint="@color/color_primary1"
        app:cardCornerRadius="@dimen/radius_12"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_36">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_slogan_greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00님, 안녕하세요!"
                android:textSize="@dimen/text_16"
                android:textColor="@color/color_primary3"
                android:fontFamily="@font/notosanskr_bold"
                android:includeFontPadding="false"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginHorizontal="@dimen/margin_16"/>
<!--            <LinearLayout-->
<!--                android:id="@+id/ll_"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content">-->
<!--                -->
<!--            </LinearLayout>-->
            <TextView
                android:id="@+id/tv_slogan_veganner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="&apos;비기너&apos;"
                android:textColor="@color/color_text_32"
                android:textSize="@dimen/text_16"
                android:fontFamily="@font/notosanskr_bold"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/tv_slogan_greeting"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/margin_24"/>
            <TextView
                android:id="@+id/tv_slogan_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_slogan_description"
                android:textSize="@dimen/text_16"
                android:textColor="@color/color_text_32"
                android:fontFamily="@font/notosanskr_regular"
                android:includeFontPadding="false"
                app:layout_constraintTop_toBottomOf="@id/tv_slogan_greeting"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/margin_24"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/tv_home_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_semi_title"
        android:textColor="@color/color_text_32"
        android:textSize="@dimen/text_16"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/cv_home_slogan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_36"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home_recommend_restaurant"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_128"
        app:layout_constraintTop_toBottomOf="@id/tv_home_description"
        android:layout_marginTop="@dimen/margin_4"
        tools:listitem="@layout/item_home_recommend_restaurant" />
    <TextView
        android:id="@+id/tv_title_today_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_today_recipe"
        android:textColor="@color/color_text_32"
        android:textSize="@dimen/text_16"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/rv_home_recommend_restaurant"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginStart="@dimen/side_margin" />
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_today_recipe"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_134"
        app:layout_constraintTop_toBottomOf="@id/tv_title_today_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_4"/>
    <LinearLayout
        android:id="@+id/ll_today_recipe_indicators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/vp_today_recipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_2">
        <ImageView
            android:id="@+id/iv_today_recipe_indicator_0"
            android:layout_width="@dimen/item_8"
            android:layout_height="@dimen/item_8"
            android:src="@drawable/shape_circle_home_indicator_active"/>
        <ImageView
            android:id="@+id/iv_today_recipe_indicator_1"
            android:layout_width="@dimen/item_8"
            android:layout_height="@dimen/item_8"
            android:src="@drawable/shape_circle_home_indicator_inactive"
            android:layout_marginHorizontal="@dimen/margin_8"/>
        <ImageView
            android:id="@+id/iv_today_recipe_indicator_2"
            android:layout_width="@dimen/item_8"
            android:layout_height="@dimen/item_8"
            android:src="@drawable/shape_circle_home_indicator_inactive"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_title_magazine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_vegan_magazine"
        android:textColor="@color/color_text_32"
        android:textSize="@dimen/text_16"
        android:fontFamily="@font/notosanskr_medium"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/ll_today_recipe_indicators"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginStart="@dimen/side_margin" />
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_magazines"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_88"
        app:layout_constraintTop_toBottomOf="@id/tv_title_magazine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_12"/>
    <LinearLayout
        android:id="@+id/ll_magazine_indicators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/vp_magazines"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_12">
        <ImageView
            android:id="@+id/iv_magazine_indicator_0"
            android:layout_width="@dimen/item_8"
            android:layout_height="@dimen/item_8"
            android:src="@drawable/shape_circle_home_indicator_active"/>
        <ImageView
            android:id="@+id/iv_magazine_indicator_1"
            android:layout_width="@dimen/item_8"
            android:layout_height="@dimen/item_8"
            android:src="@drawable/shape_circle_home_indicator_inactive"
            android:layout_marginStart="@dimen/margin_8"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>